2001-12-07  Daniel Jacobowitz  <drow@mvista.com>

	* cp-valprint.c (cp_print_value): Preserve offset if
	the virtual base is outside of this object.

2001-12-07  Daniel Jacobowitz  <drow@mvista.com>

	* gdbtypes.c (finish_cv_type): New function.
	(check_typedef): Remove ``register'' keyword from argument. 
	Preserve const and volatile attributes across filling in
	opaque types.
	* gdbtypes.h (finish_cv_type): Add prototype.

	* hp-symtab-read.c (hpread_read_struct_type): Call finish_cv_type.
	* stabsread.c (read_struct_type): Likewise.
	* dwarf2read.c (read_structure_scope): Likewise.  Remove redundant
	assignment to die->type.

2001-12-07  Jim Blandy  <jimb@redhat.com>

	* printcmd.c (print_scalar_formatted): Compare the length of the
	value against the lengths of the target's floating-point types,
	not the host's.  Add support for `long double'.

2001-12-07  Martin M. Hunt  <hunt@redhat.com>

	* configure.in: Check for sys/filio.h
	* configure: Rebuild.
	* config.in: Add HAVE_SYS_FILIO_H
	* ser-tcp.c: Conditionally include sys/filio.h.
	
2001-12-07  Andrew Cagney  <ac131313@redhat.com>

	* ui-out.c (ui_out_table_begin): Initialize body_flag.
	(struct ui_out_table): New structure.  Move table fields to here.
	Rename headercurr to headernext.
	(struct ui_out): Remove table specific fields.  Add field table.
	(ui_out_table_begin, ui_out_table_body, ui_out_table_end): Update.
	(ui_out_table_header, ui_out_begin): Update.
	(verify_field_proper_position, verify_field_alignment): Update.
	(ui_out_new, clear_header_list, append_header_to_list): Update.
	(get_next_header): Rename get_curr_header.  Update comments and
	code.

2001-12-06  Andrew Cagney  <ac131313@redhat.com>

	* regcache.c (XCALLOC): Delete macro that should not have been
	added.

2001-12-07  Jiri Smid  <smid@suse.cz>

	* dwarf2cfi.c: New file.
	* dwarf2cfi.h: New file.
	* dwarf2read.c (dwarf_frame_offset, dwarf_frame_size): New variables.
	(dwarf_eh_frame_offset, dwarf_eh_frame_size): New variables.